# chess

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  fresh.hash  fresh.hash.sort  incr.hash  incr.hash.sort
data/attacks/bishop/: 0  1  10  11  12  13  14  15  16  17  18  2  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  45  46  (+22 more)
data/attacks/queen/: 0  12  15  22  28  30  35  37  38  40  41  42  44  46  48  49  5  50  52  53  55  57  58  6  60  61  63  7  8
data/attacks/rook/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  (+24 more)
data/magics/: bishop  rook
games/: 0.sim
libchess/: Cargo.toml  build.rs
libchess/data/attacks/bishop/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  (+24 more)
libchess/data/attacks/queen/: 1  10  11  13  14  16  17  18  19  2  20  21  23  24  25  26  27  29  3  31  32  33  34  36  39  4  43  45  47  51  54  56  59  62  9
libchess/data/attacks/rook/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  (+24 more)
libchess/data/magics/: bishop  queen  rook
libchess/src/: board.rs  coord.rs  game.rs  lib.rs  movement.rs  piece.rs  zobrist.rs
libchess/src/magic_bitboard/: bishops.rs  mod.rs  queens.rs  rooks.rs  util.rs
libchess/src/movement/: mod.rs
libchess/src/precalc/: masks.rs
libchess/tests/: perft.rs
perft/: Cargo.toml
perft/benches/: perft.rs
perft/src/: lib.rs  main.rs
positioning/: Cargo.toml
positioning/src/: bitboard.rs  lib.rs  position.rs
simulator/: Cargo.toml
simulator/src/: main.rs
src/: board.rs  game.rs  lib.rs  piece.rs
src/bitboard/: Cargo.toml
src/bitboard/src/: lib.rs
src/magic_bitboard/: bishops.rs  queens.rs  rooks.rs  util.rs
src/movement/: mod.rs
src/precalc/: masks.rs  mod.rs
