[workspace]
members = [ 
  "libchess",
  "perft",
  "positioning"
]

resolver = "2"

[workspace.package]
authors = [
  "Samir Bioud <samir@kronsy.dev>"
]
homepage = "https://github.com/KronsyC/chess"
repository = "https://github.com/KronsyC/chess"
license = "MIT"
edition = "2021"
categories = ["games"]
keywords = ["chess"]
readme = "./README.md"

[profile.release]
opt-level = 3
overflow-checks=false
codegen-units=1
lto="fat"
panic = "abort"
# strip = "debuginfo"

[profile.dev]
opt-level = 2


