[package]
name = "libchess"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "game"
path = "src/bin/game.rs"

[[bin]]
name = "find_magics"
path = "src/bin/find_magics.rs"

[dependencies]
rand = "0.8.5"
rayon = {version="1.7.0"}
positioning = {path = "../positioning/"}
thiserror = "1.0.60"
smallvec = { version = "1.13.2", features = ["arbitrary"] }

[build-dependencies]
positioning = {path = "../positioning/"}
