[package]
name = "libchess"
version = "0.1.0"

description="LibChess Core Library, providing the base chess engine"

authors = {workspace = true}
homepage = {workspace = true}
repository = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
categories = {workspace = true}
keywords = {workspace = true}
readme = {workspace = true}

[[bin]]
name = "game"
path = "src/bin/game.rs"
required-features = [
  # "zobrist"
]

[[bin]]
name = "find_magics"
path = "src/bin/find_magics.rs"

[features]
zobrist = [
  "libchess_perft/zobrist"
]

[dependencies]
rand = "0.8.5"
rayon = {version="1.7.0"}
positioning = {path = "../positioning/"}
thiserror = "1.0.60"

[build-dependencies]
positioning = {path = "../positioning/"}

[dev-dependencies]
libchess_perft = {path = "../perft/"}
