[package]
name = "libchess_perft"
version = "0.1.0"
edition = "2021"

[features]
zobrist = [
  "libchess/zobrist"
]

[dependencies]
dashmap = "5.5.3"
libchess = {path = "../libchess/"}
rand = "0.8.5"
rayon = "1.10.0"


[[bench]]
name = "perft"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
libchess = {path = "../libchess/"}
rayon = "1.10.0"
