[package]
name = "libchess_perft"
version = "0.1.0"

description = "LibChess Perft Library"

authors = {workspace = true}
homepage = {workspace = true}
repository = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
categories = {workspace = true}
keywords = {workspace = true}
readme = {workspace = true}
[features]
zobrist = [
  "libchess/zobrist",
  "dep:rand"
]
parallelism = [
  "dep:rayon"
]

[dependencies]
dashmap = "5.5.3"
libchess = {path = "../libchess/"}
rand = {version="0.8.5", optional=true}
rayon = {version="1.10.0", optional=true}


[[bench]]
name = "perft"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
libchess = {path = "../libchess/"}
rayon = "1.10.0"
