[package]
name = "positioning"
version = "0.1.0"

description = "LibChess positioning Library"

authors = {workspace = true}
homepage = {workspace = true}
repository = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
categories = {workspace = true}
keywords = {workspace = true}
readme = {workspace = true}

[dependencies]
ansi_term = "0.12.1"
