[package]
name = "simulator"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
indicatif = "0.17.8"
libchess = { path = "../libchess/" }
rand = "0.8.5"
